--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">App_Alexander_P</string>
     <string name="app_idiomas">El texto de la aplicacion</string>
-    <string name="texto">Este es el segundo texto </string>
+    <string name="texto">Este es el segundo texto!!!! </string>
 
 </resources>
